--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tu ayuda espiritual</title>
+    <title>your spiritual help</title>
   </head>
   <body class="bg-secundary-900 text-gray-300">
     <div id="root"></div>
